2007-08-23  Ankit Jain  <jankit@novell.com>

	Fix bug #82533.
	* CSharpBindingCompilerManager.cs (GetResourceId): Generate .resources
	with resgen only if required.

2007-08-21  AndrÃ©s G. Aragoneses  <knocte@gmail.com>

	Improve fix for bug #82398.
	* CSharpBindingCompilerManager.cs (GetResourceId): Use MONO_IOMAP=drive,
	and only on Unix.

2007-08-20  Ankit Jain  <jankit@novell.com>

	* CSharpBindingCompilerManager.cs (Compile): Add all build files to the
	list of files to be compiled. Don't filter with CanCompile.

2007-08-16  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs: When listing the members of an enum, return enum
	  members only (it is correct to call static methods using an enum type
	  reference, but it doesn't make much sense). Fixes bug #82250.

2007-08-16  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs: Method parameters must be resolved before class
	  members. Fixes bug #82391.

2007-08-14  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs: Fix possible infinite recursion (bug #82303).

2007-08-14  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs: Properly set the showStatic flag after finding a
	  member in SearchMember. Fixes a problem with nested classes and enums:
	  members were not properly shown.

2007-08-14  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs: Properly resolve inner class names. Fixes part of
	  #82414.

2007-08-14  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs: When resolving a var name, parameters have priority
	  over fields.

2007-08-14  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs: Include arguments in the resolve list for CtrlSpace.
	  Fixes bug #82391.

2007-08-14  Ankit Jain  <jankit@novell.com>

	Fix bug #82398.
	* CSharpBindingCompilerManager.cs (GetResourceId): Run resgen with
	MONO_IOMAP=all.

2007-08-14  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs,