@@ -227,8 +227,10 @@ namespace CSharpBinding
 			//Check whether resgen required
 			FileInfo finfo_resx = new FileInfo (fname);
 			FileInfo finfo_resources = new FileInfo (Path.ChangeExtension (fname, ".resources"));
-			if (finfo_resx.LastWriteTime < finfo_resources.LastWriteTime)
+			if (finfo_resx.LastWriteTime < finfo_resources.LastWriteTime) {
+				fname = Path.ChangeExtension (fname, ".resources");
 				return null;
+			}
 
 			using (StringWriter sw = new StringWriter ()) {
 				Console.WriteLine ("Compiling resources\n{0}$ {1} /compile {2}", Path.GetDirectoryName (fname), resgen, fname);
