@@ -1,4 +1,9 @@
 2007-08-23  Ankit Jain  <jankit@novell.com>
+
+	* VBBindingCompilerServices.cs (GetResourceId): Generate .resources
+	with resgen only if required. Set resource id even if resgen is not required.
+
+2007-08-23  Ankit Jain  <jankit@novell.com>
 	    AndrÃ©s G. Aragoneses  <knocte@gmail.com>
 
 	* VBBindingCompilerServices.cs (GetResourceId): Use MONO_IOMAP=drive and
