@@ -1,3 +1,8 @@
+2007-08-23  Ankit Jain  <jankit@novell.com>
+
+	* MSBuildProjectServiceExtension.cs (GenerateXamlPartialClass): Generate
+	partial classes with xamlg only if required.
+
 2007-08-22  Ankit Jain  <jankit@novell.com>
 
 	Fix bug #82517.
