@@ -1,5 +1,10 @@
 2007-08-23  Ankit Jain  <jankit@novell.com>
 
+	* CSharpBindingCompilerManager.cs (GetResourceId): Set the resource id
+	correctly even if resgen is not required.
+
+2007-08-23  Ankit Jain  <jankit@novell.com>
+
 	Fix bug #82533.
 	* CSharpBindingCompilerManager.cs (GetResourceId): Generate .resources
 	with resgen only if required.
